Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55353

Windows: Qt Declarative qquickviewcomparison example crashes with Direct3D

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.8.0 Beta
    • 5.8.0 Alpha
    • Quick: SceneGraph
    • None
    • Windows 10, MSVC2015 64bit
    • 863a76281cefd19d7e339a78a63c86dff0f9dcce

    Description

      • Launch example with QT_QUICK_BACKEND=d3d12 set
      • [note Main screen is black due to missing support for QQuickWidget]
      • Click radio button "QQuickView in container"
      • Crash

      It seems to be related to the QML file (particles?); embedding into QQuickView seems to work otherwise.

      Should this crash or bail out cleanly?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes