Have proper OpenGL checks in QQuickFBO and image particles

These use custom materials that can crash when running with the D3D12
backend. We prefer handling such situations gracefully, with the
application surviving. Therefore check the backend in use, and skip
creating a scenegraph node when the backend is not OpenGL.

Task-number: QTBUG-55353
Change-Id: I0be326fd2eacb0be604a0f111fa916558376c75a
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>