src/quick/items/qquickframebufferobject.cpp
@@ -44,6 +44,7 @@
 #include <private/qquickitem_p.h>
 
 #include <QSGSimpleTextureNode>
+#include <QSGRendererInterface>
 
 QT_BEGIN_NAMESPACE
 
@@ -260,6 +261,12 @@ public:
     int devicePixelRatio;
 };
 
+static inline bool isOpenGL(QSGRenderContext *rc)
+{
+    QSGRendererInterface *rif = rc->sceneGraphContext()->rendererInterface(rc);
+    return !rif || rif->graphicsApi() == QSGRendererInterface::OpenGL;
+}
+
 /*!
  * \internal
  */
@@ -278,6 +285,8 @@ QSGNode *QQuickFramebufferObject::updatePaintNode(QSGNode *node, UpdatePaintNode
     Q_D(QQuickFramebufferObject);
 
     if (!n) {
+        if (!isOpenGL(d->sceneGraphRenderContext()))
+            return 0;
         if (!d->node)
             d->node = new QSGFramebufferObjectNode;
         n = d->node;
@@ -360,6 +369,8 @@ QSGTextureProvider *QQuickFramebufferObject::textureProvider() const
         qWarning("QQuickFramebufferObject::textureProvider: can only be queried on the rendering thread of an exposed window");
         return 0;
     }
+    if (!isOpenGL(d->sceneGraphRenderContext()))
+        return 0;
     if (!d->node)
         d->node = new QSGFramebufferObjectNode;
     return d->node;
